--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,11 @@ dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "requests (>=2.32.4,<3.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "sqlalchemy (>=2.0.41,<3.0.0)",
+    "tabulate (>=0.9.0,<0.10.0)",
+    "reportlab (>=4.4.2,<5.0.0)"
 ]
-
 
 [tool.poetry]
 name = "supernote-sync"
@@ -29,6 +31,9 @@ supernote-sync = "snsync.__main__:main"
 
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.lint]
+select = ["I"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
