--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "supernote-sync"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = [
     {name = "Jerome Boisvert-Chouinard",email = "github@jbchouinard.net"}
@@ -18,6 +18,11 @@ dependencies = [
     "tabulate (>=0.9.0,<0.10.0)",
     "reportlab (>=4.4.2,<5.0.0)"
 ]
+
+[project.urls]
+Homepage = "https://github.com/jbchouinard/supernote-sync"
+Repository = "https://github.com/jbchouinard/supernote-sync"
+Issues = "https://github.com/jbchouinard/supernote-sync/issues"
 
 [tool.poetry]
 name = "supernote-sync"
