--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
 [project]
 name = "supernote-sync"
-version = "0.2.3"
+version = "0.3.0"
 description = "Automatically sync Supernote notebooks and convert to PDF on local WiFi"
 authors = [
     {name = "Jerome Boisvert-Chouinard",email = "github@jbchouinard.net"}
 ]
 license = "Apache-2.0"
 readme = "README.md"
-requires-python = ">=3.9,<4"
+requires-python = ">=3.11,<4"
 dependencies = [
-    "supernotelib (>=0.6.2,<0.7.0)",
+    "loguru (>=0.7.3,<0.8.0)",
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
+    "reportlab (>=4.4.2,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
-    "loguru (>=0.7.3,<0.8.0)",
+    "sn2md (>=2.3.2,<3.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
+    "supernotelib (>=0.6.2,<0.7.0)",
     "tabulate (>=0.9.0,<0.10.0)",
-    "reportlab (>=4.4.2,<5.0.0)"
 ]
 
 [project.urls]
@@ -39,7 +40,9 @@ supernote-sync = "snsync.__main__:main"
 line-length = 120
 
 [tool.ruff.lint]
-select = ["I"]
+select = ["I", "E", "W", "B", "F"]
+fixable = ["I001", "F401"]
+unfixable = []
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
