--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "supernote-sync"
-version = "0.3.3"
+version = "0.3.4"
 description = "Automatically sync Supernote notebooks and convert to PDF on local WiFi"
 authors = [
     {name = "Jerome Boisvert-Chouinard",email = "github@jbchouinard.net"}
@@ -14,7 +14,10 @@ dependencies = [
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "reportlab (>=4.4.2,<5.0.0)",
     "requests (>=2.32.4,<3.0.0)",
-    "sn2md (>=2.3.2,<3.0.0)",
+    # "sn2md (>=2.3.2,<3.0.0)",
+    # TODO: Switch back if and when this is fixed:
+    # https://github.com/dsummersl/sn2md/pull/27
+    "sn2md @ git+https://github.com/jbchouinard/sn2md.git",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "supernotelib (>=0.6.2,<0.7.0)",
     "tabulate (>=0.9.0,<0.10.0)",
